[565922] remove existing endorsed VM arg when not valid at launch
Signed-off-by: Nitin Dahyabhai <thatnitind@gmail.com>
Change-Id: I4339b2662409faa40067cfff253e4ba4625ea921